# smart-sleep-light

./: README.md
client/: CMakeLists.txt  Makefile
client/src/: client  client.c
server/: CMakeLists.txt  Makefile
server/include/: buzzer.h  countdown.h  led.h  light.h
server/server/: server.c
server/src/: buzzer.c  countdown.c  led.c  light.c
